# gripper_detector

./: CMakeLists.txt  package.xml
include/gripper_detector/: gripper_detector.h
models/: A.0.pos  A.cao  A.init
src/: gripper_detector.cpp
srv/: DetectGripper.srv
